# potato

./: .editorconfig  .gitattributes  .gitignore  .gitmodules
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-functions.yml  push-image.yml  unity-ci.yml
client/csharp/: Auth_Login.cs  Channel_Search.cs  Chat_SendStamp.cs
client/game/ProjectSettings/: ProjectSettings.asset
client/potato/: .editorconfig
client/potato/Assets/: UnitView.cs
client/potato/Assets/Examples/: Field.unity  Loading.anim  Loading.prefab  Player.prefab  SampleScene.unity  Trail.prefab
client/potato/Assets/Examples/Map1/: Map1.unity
client/potato/Assets/Examples/PlayerCharacter/: Player.controller  Player.prefab
client/potato/Assets/Examples/PlayerCharacter/Idle/: idle_down.prefab  idle_side.prefab  idle_up.prefab
client/potato/Assets/Examples/TileTest/: New Palette 1.prefab  New Palette.prefab  New Rule Tile 1.asset  New Rule Tile.asset
client/potato/Assets/Plugins/Terminal.Gui/: Terminal.Gui.asmdef
client/potato/Assets/Scenes/: SampleScene.unity  TerminalGui.unity
client/potato/Assets/Scripts/Controller/: Controller.asmdef  GameController.cs
client/potato/Assets/Scripts/Core/: Core.asmdef  Potato.Vector3Extension.cs  TimeHelpers.cs  UnityEngine.Vector3Extension.cs
client/potato/Assets/Scripts/Editor/: Editor.asmdef  RpcLoggerDialog.cs  ServerCommandDialog.cs
client/potato/Assets/Scripts/Example/: CharBackground.cs  CharBackground.prefab  CharForeground.cs  CharForeground.prefab  Example.asmdef  Example.cs  PositionDisplay.cs  Potato.Vector3Extension.cs  TerminalGuiTest.cs  UnityDriver.cs
client/potato/Assets/Scripts/Network/: NetworkService.cs  Payload.cs  Session.cs
client/potato/Assets/Scripts/Proto/: .gitignore  AuthLogin.cs  ChannelCreate.cs  ChannelCreated.cs  ChannelSearch.cs  ChatSendMessage.cs  ChatSendStamp.cs  DiagnosisPingPong.cs  DiagnosisSeverSessions.cs  ExampleDespawn.cs  ExampleSpawn.cs  ExampleUpdateMousePosition.cs  Message.cs  Proto.asmdef  UnitDespawn.cs  UnitMove.cs  UnitSpawn.cs  UnitSpawnReady.cs  UnitStop.cs  message.cs
client/potato/Assets/Scripts/Rpc/: NetworkService.cs  Payload.cs  Rpc.asmdef  RpcBuilder.cs  Session.cs
client/potato/Assets/Scripts/System/: IUnit.cs  Service.cs  UnitService.cs
client/potato/Assets/Scripts/Units/: Command.cs  ControllablePlayerUnit.cs  IHasStatus.cs  IUnit.cs  PlayerUnit.cs  UnitAnimation.cs  UnitService.cs  UnitView.cs  Units.asmdef
client/potato/Assets/System/: Services.prefab
client/potato/Assets/Tests.EditMode/: TestCommand.cs  TestUnitMove.cs  Tests.EditMode.asmdef  UnitMove.cs  Vector3Constraint.cs
client/potato/Assets/Tests.PlayMode/: Tests.PlayMode.asmdef
client/potato/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
docs/network-sequences/: login.md  transport.md
server/: docker-compose.build-and-run.yml
server/action-server/: action-server.sln  action-server.vcxproj  main.cpp
server/action-server2/: CMakeLists.txt  action-server2.cpp  action-server2.h
server/action-server2/protocol/: gc-hello.fbs  gc-message.fbs
server/action-server2/src/: Payload.cpp  Payload.h
server/action-server3/: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  action-server3.cpp  action-server3.h  apt.souces.list  clean_generated_files.sh  cpp.hint  generate_csharp_proto.bat  generate_csharp_proto.sh
server/action-server3/proto/: .gitignore  CMakeLists.txt  Message.proto  area.proto  auth_login.proto  battle.proto  chat_send_message.proto  chat_send_stamp.proto  message.proto
server/action-server3/proto/auth/: auth_login.proto
server/action-server3/proto/channel/: channel_create.proto  channel_created.proto  channel_search.proto
server/action-server3/proto/chat/: chat_send_message.proto  chat_send_stamp.proto
server/action-server3/proto/diagnosis/: diagnosis_sever_sessions.proto
server/action-server3/proto/example/: example_update_mouse_position.proto
server/action-server3/rpc/: .gitignore  CMakeLists.txt  area.yaml  auth.yaml  battle.yaml  chat.yaml  core_defines.yaml  diagnosis.yaml  example.yaml  payload.yaml  room.yaml  rpc.hash  rpc.yaml  unit.yaml
server/action-server3/src/: Payload.cpp  Payload.h  rpc.cpp  rpc.h  session.cpp  session.h
server/action-server3/src/area/: area.cpp  area.h  area_constituter.cpp  area_constituter.h  area_registry.cpp  area_registry.h  area_transporter.cpp  area_transporter.h  area_types.h
server/action-server3/src/core/: configured_boost_thread.h  configured_eigen.h
server/action-server3/src/node/: node.cpp  node.h
server/action-server3/src/rpc/: payload.cpp  payload.h  rpc.h
server/action-server3/src/services/: game_service_provider.cpp  game_service_provider.h  network_service_provider.cpp  network_service_provider.h  serialize_service_provider.cpp  serialize_service_provider.h  service.h  service_provider.h  service_registry.cpp  service_registry.h
server/action-server3/src/session/: session.cpp  session.h  session_types.h
server/action-server3/src/units/: unit.cpp  unit.h  unit_registory.cpp  unit_registory.h  unit_registry.cpp  unit_registry.h  unit_types.h
server/action-server3/src/units/commands/: command_knockback.h  command_move.h  command_stop.h  command_types.h
server/action-server3/src/units/components/: area_transport_component.h  area_transporter_component.cpp  component_types.h  npc_component.cpp  npc_component.h  status_component.cpp  status_component.h
server/action-server3/src/user/: user.cpp  user.h  user_registory.cpp  user_registory.h  user_registry.cpp  user_registry.h  user_types.h
server/action-server3/src/utility/: vector_utility.cpp  vector_utility.h
server/action-server3/torikime/: .editorconfig  Pipfile  define-enum.j2  define-message.j2  proto.j2  rpc-builder-cpp.j2  rpc-builder-csharp.j2  rpc-builder-hpp.j2  rpc-cpp.j2  rpc-csharp.j2  rpc-hpp.j2  torikime.py
server/action-server3/torikime/None/: rpc_builder.cpp  rpc_builder.h
server/functions/get-hosts/: README.md  entrypoint.js  listVMs.js  package-lock.json  package.json
(+22 files in other folders)
