INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

set(Protobuf_DEBUG ON)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/battle.proto DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/message.proto DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

FILE(GLOB_RECURSE BASE_PROTO_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS "*.proto")
MESSAGE("BASE_PROTO_SOURCES: ${BASE_PROTO_SOURCES}")

FILE(GLOB_RECURSE PROTO_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/*.proto")
MESSAGE("PROTO_SOURCES: ${PROTO_SOURCES}")

protobuf_generate_cpp(PROTO_SRC PROTO_HEADER DESCRIPTORS DES ${PROTO_SOURCES})
MESSAGE("PROTO_SRC: ${PROTO_SRC}")
MESSAGE("PROTO_HEADER: ${PROTO_HEADER}")
MESSAGE("DES: ${DES}")

FILE(GLOB_RECURSE PROTO_CPP_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/*.cpp")
MESSAGE("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
MESSAGE("PROTO_CPP_SOURCES: ${PROTO_CPP_SOURCES}")

ADD_LIBRARY(proto ${PROTO_SRC}  ${PROTO_HEADER})

add_dependencies(proto rpc_generate)

set(GENERATED_PROTO_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
