include(FindProtobuf)
find_package(Protobuf REQUIRED)

set(Protobuf_DEBUG ON)

# file(GLOB STATIC_PROTOS "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
# file(COPY ${STATIC_PROTOS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

set(PROTO_SOURCES ${GENERATED_PROTO_FILES})
# message("GENERATED_PROTO_FILES: ${GENERATED_PROTO_FILES}")
# message("PROTO_SOURCES: ${PROTO_SOURCES}")

protobuf_generate_cpp(PROTO_SRC PROTO_HEADER DESCRIPTORS DES ${PROTO_SOURCES})
# message("PROTO_SRC: ${PROTO_SRC}")
# message("PROTO_HEADER: ${PROTO_HEADER}")
# message("DES: ${DES}")

file(GLOB_RECURSE PROTO_CPP_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/*.cpp")
# message("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
# message("PROTO_CPP_SOURCES: ${PROTO_CPP_SOURCES}")

add_library(proto ${PROTO_SRC}  ${PROTO_HEADER})

target_include_directories(proto PRIVATE ${PROTOBUF_INCLUDE_DIR})
target_include_directories(proto PRIVATE ${CMAKE_CURRENT_BINARY_DIR})

add_dependencies(proto rpc_generate)

set(GENERATED_PROTO_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
set_target_properties(proto PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_BINARY_DIR})
